--- a/pages/19577.html
+++ b/pages/19577.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      central extension in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      central extension
   </h1>
 
 
@@ -293,6 +293,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8806/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -305,52 +307,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><math class='maruku-mathml' display='inline' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>U</mi> <mn>1</mn></msub></mtd> <mtd><mo>↦</mo></mtd> <mtd><mtext>&quot;Maps(</mtext><msub><mi>U</mi> <mn>1</mn></msub><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mtext>)&quot;</mtext></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>ϕ</mi></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↑</mo><msup><mrow></mrow> <mpadded width='0'><mrow><mi>Maps</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mtext>&quot;precomposition with</mtext><mspace width='thickmathspace'></mspace><mi>ϕ</mi><mtext>&quot;</mtext></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><msub><mi>U</mi> <mn>2</mn></msub></mtd> <mtd><mo>↦</mo></mtd> <mtd><mtext>&quot;Maps(</mtext><msub><mi>U</mi> <mn>2</mn></msub><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mtext>)&quot;</mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>\array{ U_1 &amp;\mapsto&amp; \text{&quot;Maps(}U_1,\mathbf{X}\text{)&quot;} \\ {}^{\mathllap{\phi}}\Big\downarrow &amp;&amp; \Big\uparrow{}^{  \mathrlap{ Maps(\phi,\mathbf{X}) \;\;\text{&quot;precomposition with}\; \phi\text{&quot;}  } } \\ U_2 &amp;\mapsto&amp; \text{&quot;Maps(}U_2,\mathbf{X}\text{)&quot;}  }</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
-  dgcAlg^{op}_{\mathbb{R}, \geq 0, proj}
-    \;
-    \underoverset
-      {\underset{ Spec }{\longrightarrow}}
-      {\overset{ \mathcal{O} }{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  [SuperCartSp^{op},sSet_{Qu}]_{proj,loc}
-    \;
-    \underoverset
-      {\underset{\Gamma}{\longrightarrow}}
-      {\overset{const}{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  sSet_{Qu}
-    \;
-    \underoverset
-      {\underset{Sing}{\longleftarrow}}
-      {\overset{{\vert- \vert}}{\longrightarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  Top_{Qu}
-
-</annotation></semantics></math></div>
+      <p>Stub. Content to be added.</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  1, 2018 at 17:54:52.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August  1, 2018 at 17:26:33.
+  See the <a href="https://ncatlab.org/nlab/history/central extension" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1621" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1621 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/central extension/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/central+extension" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/central+extension" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/central+extension" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
