--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -305,44 +305,37 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><math class='maruku-mathml' display='inline' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>U</mi> <mn>1</mn></msub></mtd> <mtd><mo>↦</mo></mtd> <mtd><mtext>&quot;Maps(</mtext><msub><mi>U</mi> <mn>1</mn></msub><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mtext>)&quot;</mtext></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>ϕ</mi></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↑</mo><msup><mrow></mrow> <mpadded width='0'><mrow><mi>Maps</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mtext>&quot;precomposition with</mtext><mspace width='thickmathspace'></mspace><mi>ϕ</mi><mtext>&quot;</mtext></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><msub><mi>U</mi> <mn>2</mn></msub></mtd> <mtd><mo>↦</mo></mtd> <mtd><mtext>&quot;Maps(</mtext><msub><mi>U</mi> <mn>2</mn></msub><mo>,</mo><mstyle mathvariant='bold'><mi>X</mi></mstyle><mtext>)&quot;</mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>\array{ U_1 &amp;\mapsto&amp; \text{&quot;Maps(}U_1,\mathbf{X}\text{)&quot;} \\ {}^{\mathllap{\phi}}\Big\downarrow &amp;&amp; \Big\uparrow{}^{  \mathrlap{ Maps(\phi,\mathbf{X}) \;\;\text{&quot;precomposition with}\; \phi\text{&quot;}  } } \\ U_2 &amp;\mapsto&amp; \text{&quot;Maps(}U_2,\mathbf{X}\text{)&quot;}  }</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50310b98aed16b5e01f25fada684e3014ceedaaa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
-  dgcAlg^{op}_{\mathbb{R}, \geq 0, proj}
-    \;
-    \underoverset
-      {\underset{ Spec }{\longrightarrow}}
-      {\overset{ \mathcal{O} }{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  [SuperCartSp^{op},sSet_{Qu}]_{proj,loc}
-    \;
-    \underoverset
-      {\underset{\Gamma}{\longrightarrow}}
-      {\overset{const}{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  sSet_{Qu}
-    \;
-    \underoverset
-      {\underset{Sing}{\longleftarrow}}
-      {\overset{{\vert- \vert}}{\longrightarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  Top_{Qu}
+      <p>“<a class='existingWikiWord' href='/nlab/show/odd+tangent+bundle'>odd tangent bundle</a>”</p>
+
+<p>By def. <a class='maruku-ref' href='#TangentBundleOdd'></a> this says that <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub><mo>×</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>V_{odd} \times V</annotation></semantics></math> is the “<a class='existingWikiWord' href='/nlab/show/odd+tangent+bundle'>odd tangent bundle</a>” of <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub></mrow><annotation encoding='application/x-tex'>V_{odd}</annotation></semantics></math>.</p>
+
+<div class='num_example' id='SuperpointsMapping'>
+<h6 id='example'>Example</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/mapping+space'>mapping space</a> of <a class='existingWikiWord' href='/nlab/show/superpoints'>superpoints</a>)</strong></p>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/finite+dimensional+vector+space'>finite dimensional</a> <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a> and consider its corresponding <a class='existingWikiWord' href='/nlab/show/superpoint'>superpoint</a> <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub></mrow><annotation encoding='application/x-tex'>V_{odd}</annotation></semantics></math> from exampe <a class='maruku-ref' href='#SuperpointInducedByFiniteDimensionalVectorSpace'></a>. Then the <a class='existingWikiWord' href='/nlab/show/mapping+space'>mapping space</a> (def. <a class='maruku-ref' href='#MappingSpaceOutOfASuperCartesianSpace'></a>) out of the <a class='existingWikiWord' href='/nlab/show/superpoint'>superpoint</a> <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{0\vert 1}</annotation></semantics></math> (def. <a class='maruku-ref' href='#SuperCartesianSpace'></a>) into <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub></mrow><annotation encoding='application/x-tex'>V_{odd}</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Cartesian+product'>Cartesian product</a> <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub><mo>×</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>V_{odd} \times V</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup><mo>,</mo><msub><mi>V</mi> <mi>odd</mi></msub><mo stretchy='false'>]</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><msub><mi>V</mi> <mi>odd</mi></msub><mo>×</mo><mi>V</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  [\mathbb{R}^{0\vert 1}, V_{odd}]
+  \;\simeq\;
+  V_{odd} \times V
+  \,.
 
 </annotation></semantics></math></div>
+<p>By def. <a class='maruku-ref' href='#TangentBundleOdd'></a> this says that <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub><mo>×</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>V_{odd} \times V</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/odd+tangent+bundle'>odd tangent bundle</a> of <math class='maruku-mathml' display='inline' id='mathml_7ae800cb119c27b6d6282bf1a84a9b8b422aa212_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mi>odd</mi></msub></mrow><annotation encoding='application/x-tex'>V_{odd}</annotation></semantics></math>.</p>
+</div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  1, 2018 at 17:54:52.
+  Last revised on August  2, 2018 at 05:56:05.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1621" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1621 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1622" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1622 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
