--- a/pages/1788.html
+++ b/pages/1788.html
@@ -306,18 +306,84 @@ margin-left: 0em;
 
 <div id="revision">
       <p>Finished.</p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_bd5eb8107c2886ec81ed9d8745c708ca8ab48539_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><munder><munder><mrow><msubsup><mi>dgcSuperAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munder><munder><munder><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>higher super</mtext></mrow><mrow><mtext>Lie integration</mtext></mrow></mfrac></mstyle></munder><mspace width='thickmathspace'></mspace><mi>Funct</mi><msub><mrow><mo>(</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><mo>)</mo></mrow> <mi>loc</mi></msub><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>include </mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>geometrically discrete</mtext></mrow><mrow><mtext>∞-groupoids</mtext></mrow></mfrac></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub></mrow><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mtext>Sullivan de Rham adjunction</mtext></mstyle></munder><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>≃</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>regard ∞-groupoids</mtext></mrow><mrow><mtext>as topological spaces</mtext></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
+  \underset{ 
+     \color{blue} \text{Sullivan de Rham adjunction}
+  }{
+  \underbrace{
+  \underset{\phantom{A} \atop \phantom{A}}{
+  dgcSuperAlg^{op}_{\mathbb{R}, \geq 0, proj}
+    \;
+   \underset{
+     \color{blue}
+     {\text{higher super}
+     \atop
+     \text{Lie integration} }
+   }{
+   \underbrace{
+    \underset{
+      \phantom{A} \atop \phantom{A}
+    }{
+    \underoverset
+      {\underset{ Spec }{\longrightarrow}}
+      {\overset{ \mathcal{O} }{\longleftarrow}}
+      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
+   }}}
+    \;
+  Funct\left( SuperCartSp^{op},sSet_{Qu}\right)_{loc}
+    \;
+  \overset{
+    \color{blue}{
+    \text{include }
+    \atop
+    {
+     \text{geometrically discrete}
+     \atop
+     \text{∞-groupoids}
+    }}
+  }{
+  \overbrace{
+    \overset{ \phantom{A} \atop \phantom{A} }{
+    \underoverset
+      {\underset{\Gamma}{\longrightarrow}}
+      {\overset{const}{\longleftarrow}}
+      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
+  }}}
+    \;
+  sSet_{Qu}
+  }}
+  }
+    \;
+  \overset{
+    \color{blue}{
+    \text{regard ∞-groupoids}
+    \atop
+    \text{as topological spaces}
+    }
+  }{
+  \overbrace{
+    \overset{ \phantom{A} \atop \phantom{A} }{
+    \underoverset
+      {\underset{Sing}{\longleftarrow}}
+      {\overset{{\vert- \vert}}{\longrightarrow}}
+      {\phantom{A}\phantom{{}_{Qu}}\simeq_{Qu}\phantom{A}}
+   }}}
+    \;
+  Top_{Qu}
+</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  2, 2018 at 06:14:45.
+  Last revised on August  2, 2018 at 08:48:57.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1622" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1622 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1623" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1623 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
